--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,16 @@
 .vscode/**
-.vscode-test/**
-test/**
+.vscode-test-web/**
+src/**
+out/**
+node_modules/**
+dist/**/test/**
 .gitignore
-.yarnrc
 vsc-extension-quickstart.md
-**/jsconfig.json
-**/*.map
+webpack.config.js
+esbuild.js
+.yarnrc
+**/tsconfig.json
 **/eslint.config.mjs
+**/*.map
+**/*.ts
 **/.vscode-test.*
